--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Jogo Da Velha</title>
     <link rel="stylesheet" href="/assets/style/main.css">
+    <link rel="icon" href="./assets/icon/favicon-32x32.png" type="image/png">
   </head>
   <body>
     <main>
